# virya_coding_assignment

./: Dockerfile  README.md  docker_run.bash
src/turtlebot3_gazebo/: CMakeLists.txt  package.xml
src/turtlebot3_gazebo/launch/: occupancy_grid.launch.py  spawn_turtlebot3.launch.py  turtlebot3_cartographer.launch.py  turtlebot3_race.launch.py  virya_test.launch.py
src/turtlebot3_gazebo/models/ground_plane/: model.sdf
src/turtlebot3_gazebo/models/turtlebot3_burger/: model-1_4.sdf  model.sdf
src/turtlebot3_gazebo/params/: turtlebot3_burger_bridge.yaml
src/turtlebot3_gazebo/scripts/: map.pgm  map.yaml  map_publisher.py  virya_test_node.py
src/turtlebot3_gazebo/worlds/: turtlebot3_maze.world  turtlebot3_world.world
